# syn_api

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
src/: main.rs
src/extractors/: mongo_collection.rs
src/middleware/: ejson.rs  extractors.rs
src/routes/: health_check_routes.rs  mongo_routes.rs  stats_routes.rs  user_routes.rs
src/structs/: requests.rs  responses.rs  user.rs
src/structs/requests/: aggregate.rs  delete.rs  find.rs  find_one.rs  insert_many.rs  insert_one.rs  update.rs
src/traits/: requests.rs
src/utils/: mongo.rs  streams.rs
