[package]
name = "syn_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.18"
mongodb = "2.5.0"
serde = "1.0.163"
serde_json = "1.0.96"
